--- a/hackton2024/app/src/main/AndroidManifest.xml
+++ b/hackton2024/app/src/main/AndroidManifest.xml
@@ -13,13 +13,22 @@
         android:theme="@style/Theme.Hackton2024"
         tools:targetApi="31">
         <activity
+            android:name=".alert"
+            android:exported="false" />
+        <activity
+            android:name=".adminPage"
+            android:exported="false" />
+        <activity
             android:name=".Settings"
             android:exported="false" />
         <activity
             android:name=".SignUp"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".stressReduce"
+            android:exported="false" />
+        <activity
+            android:name=".fourseveneight"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
