--- a/hackton2024/app/src/main/AndroidManifest.xml
+++ b/hackton2024/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hackton2024"
         tools:targetApi="31">
+        <activity android:name=".fadeIn"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".alert"
             android:exported="false" />
@@ -32,12 +39,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
     </application>
 
