put the logo in mee daddy

--- a/hackton2024/app/src/main/AndroidManifest.xml
+++ b/hackton2024/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hackton2024"
         tools:targetApi="31">
-        <activity android:name=".fadeIn"
+        <activity
+            android:name=".RelaxVid"
+            android:exported="false" />
+        <activity
+            android:name=".fadeIn"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -39,8 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
