Added see contacts

--- a/hackton2024/app/src/main/AndroidManifest.xml
+++ b/hackton2024/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-feature android:name="android.hardware.telephony" android:required="true" />
 
+    <uses-permission android:name="android.permission.PICK_CONTACT_REQUEST" />
 
     <application
         android:allowBackup="true"
